Navbar animation / fix x-scrollbar / fix general site view

--- a/src/Components/About/about.css
+++ b/src/Components/About/about.css
@@ -16,7 +16,7 @@
 
 .about__Title-Container{
     width: 100%;
-    padding: 0 120px;
+    padding: 0 90px;
 }
 .about__Title{
     color: #FFFCF2;
