--- a/src/Components/Experience/experience.css
+++ b/src/Components/Experience/experience.css
@@ -16,7 +16,7 @@
 
 .experience__Title-Container{
     width: 100%;
-    padding: 0 120px;
+    padding: 0 50px;
 }
 .experience__Title{
     color: #FFFCF2;
