--- a/src/Components/MyTools/components/skillCard.css
+++ b/src/Components/MyTools/components/skillCard.css
@@ -1,7 +1,7 @@
 .card{
     max-height: 20rem;
     width: 13rem;
-    height: 13rem;
+    height: 15rem;
     border-radius: 0;
     background-color: #403D39;
     transition: ease-in;    
