--- a/src/Components/MyTools/myTools.css
+++ b/src/Components/MyTools/myTools.css
@@ -1,6 +1,9 @@
+.myTools__Container{
+    height: auto;
+}
 .myTools__Title-Container{
     width: 100%;
-    padding: 0 120px;
+    padding: 0 90px;
 }
 .myTools__Title{
     color: #FFFCF2;    
