--- a/src/Components/Projects/project.css
+++ b/src/Components/Projects/project.css
@@ -15,7 +15,7 @@
 }
 .project__Title-Container{
     width: 100%;
-    padding: 0 120px;
+    padding: 0 90px;
 }
 .project__Title{
     color: #FFFCF2;
